[package]
name = "b2m"
version = "0.20.0"
authors = ["snylonue <snylonue@gmail.com>"]
edition = "2018"
repository = "https://github.com/snylonue/b2m"
description = "Play bilibili or other videos with mpv"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/snylonue/b2m"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
serde_json = "1.0"
anyhow = "1"
regex = "1"
finata = { git = "https://github.com/snylonue/finata.git", optional = true }
tokio = { version = "0.2", optional = true }

[features]
default = ["annie", "youget"]
annie = []
youget = []
nfinata = ["finata", "tokio"]